correct stacking of iages with numpy

--- a/notebooks/SignalStar_concatenate_tiles.ipynb
+++ b/notebooks/SignalStar_concatenate_tiles.ipynb
@@ -2,27 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aicsimageio.writers import OmeTiffWriter\n",
-    "from aicsimageio import aics_image as AI\n",
-    "from aicsimageio import AICSImage, imread\n",
-    "import dask\n",
-    "import dask.array as da\n",
-    "import os"
+    "#from aicsimageio.writers import OmeTiffWriter\n",
+    "#from aicsimageio import aics_image as AI\n",
+    "#from aicsimageio import AICSImage, imread, ome_tiff_writer\n",
+    "#import dask\n",
+    "#import dask.array as da\n",
+    "import os\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import tifffile as tiff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacked image saved to ./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/stacked_output.ome.tiff\n"
+     ]
+    }
+   ],
    "source": [
+    "### save with AICSImage -- not correct even though it looks correct in imagej\n",
+    "\n",
     "# Paths to input and output directories\n",
-    "input_dir = './../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/test/'\n",
-    "output_file = './../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/stacked_output.ome.tiff'\n",
+    "input_dir = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/test/'\n",
+    "output_file = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/stacked_output.ome.tiff'\n",
     "\n",
     "# Make list of all files with a \".tif\" extension in the input directory\n",
     "input_files = [os.path.join(input_dir, file) for file in os.listdir(input_dir) if file.endswith('.tif')]\n",
@@ -53,6 +66,63 @@
     "\n",
     "# Save the stacked image using OmeTiffWriter\n",
     "OmeTiffWriter.save(out, output_file, dim_order=\"CTZYX\")\n",
+    "\n",
+    "print(f\"Stacked image saved to {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacked image saved to ./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output.tif\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/79/cjwcycvd2_9dyfffbym60x200000gn/T/ipykernel_14159/1052931816.py:34: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
+      "  tiff.imsave(output_file, stacked_image)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try to save as numpy array: WORKS\n",
+    "\n",
+    "# Paths to input and output directories\n",
+    "input_dir = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/test/'\n",
+    "output_file = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output.tif'\n",
+    "\n",
+    "# Make list of all files with a \".tif\" extension in the input directory\n",
+    "input_files = [os.path.join(input_dir, file) for file in os.listdir(input_dir) if file.endswith('.tif')]\n",
+    "# Sort the list of files alphabetically\n",
+    "input_files = sorted(input_files)\n",
+    "\n",
+    "# Load the first image to determine the shape\n",
+    "first_img = np.asarray(tiff.imread(input_files[0]))\n",
+    "\n",
+    "# Number of tiles (one file per tile)\n",
+    "num_tiles = len(input_files)\n",
+    "# Number of channels in each tile (assumed to be the same for all tiles)\n",
+    "num_channels = first_img.shape[0]\n",
+    "\n",
+    "# Initialize an empty numpy array to hold all images\n",
+    "# Shape: (Tiles, Channels, Z, Y, X)\n",
+    "stack_shape = (num_tiles, num_channels, first_img.shape[1], first_img.shape[2])\n",
+    "stacked_image = np.empty(stack_shape, dtype=first_img.dtype)\n",
+    "\n",
+    "# Loop through each file and stack the images\n",
+    "for idx, file in enumerate(input_files):\n",
+    "    img = np.asarray(tiff.imread(file))\n",
+    "    stacked_image[idx] = img\n",
+    "\n",
+    "# Save the stacked image as a TIFF file\n",
+    "tiff.imsave(output_file, stacked_image)\n",
     "\n",
     "print(f\"Stacked image saved to {output_file}\")\n"
    ]
