first attempt to convert to uint16

--- a/notebooks/SignalStar_concatenate_tiles.ipynb
+++ b/notebooks/SignalStar_concatenate_tiles.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/79/cjwcycvd2_9dyfffbym60x200000gn/T/ipykernel_14159/1052931816.py:34: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
+      "/var/folders/79/cjwcycvd2_9dyfffbym60x200000gn/T/ipykernel_14159/2789077634.py:31: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
       "  tiff.imsave(output_file, stacked_image)\n"
      ]
     }
@@ -125,6 +125,24 @@
     "tiff.imsave(output_file, stacked_image)\n",
     "\n",
     "print(f\"Stacked image saved to {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert the file to uint16\n",
+    "\n",
+    "# Read the float TIFF\n",
+    "img = tiff.imread('./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output.tif')\n",
+    "\n",
+    "# Convert the image to uint16 (scale if necessary)\n",
+    "img_uint16 = (img * 65535).astype(np.uint16)\n",
+    "\n",
+    "# Save the converted image\n",
+    "tiff.imwrite('./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output_uint16.tif', img_uint16)"
    ]
   }
  ],
