correct metadata extraction that introduces true gaps

--- a/notebooks/SignalStar_concatenate_tiles.ipynb
+++ b/notebooks/SignalStar_concatenate_tiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,32 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths to input and output directories\n",
-    "input_dir = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/test/'\n",
-    "output_file = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output.tif'"
+    "input_dir = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/test9/'\n",
+    "output_file = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output9.tif'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stacked image saved to ./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output.tif\n"
+      "Stacked image saved to ./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output9.tif\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/79/cjwcycvd2_9dyfffbym60x200000gn/T/ipykernel_44301/2789077634.py:31: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
+      "/var/folders/79/cjwcycvd2_9dyfffbym60x200000gn/T/ipykernel_44301/1808586505.py:27: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
       "  tiff.imsave(output_file, stacked_image)\n"
      ]
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
      "output_type": "stream",
      "text": [
       "float32\n",
-      "0.0 100.886406\n"
+      "0.0 100.97945\n"
      ]
     }
    ],
@@ -100,19 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "#rescale float32 to uint16 with scikit image:\n",
-    "numpy_stacked_tif = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output.tif'\n",
+    "numpy_stacked_tif = './../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output9.tif'\n",
     "from skimage import util\n",
     "\n",
     "# Read the float TIFF\n",
     "img = tiff.imread(numpy_stacked_tif)\n",
     "# Assuming img is your image data\n",
     "\n",
-    "# Normalize to [0, 1]\n",
+    "# Normalize to [0, 1] !!!per channel!!! TODO\n",
     "img_normalized = img / img.max()\n",
     "\n",
     "# Convert to uint16\n",
@@ -121,12 +121,12 @@
     "# Save the converted image\n",
     "#io.imsave('./output_uint16.tif', img_uint16)\n",
     "# Save the converted image\n",
-    "tiff.imwrite('./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output_uint16.tif', img_uint16)"
+    "tiff.imwrite('./../../../../data/Human_squamous_cell_carcinoma_stained_with_SignalStar_mIHC_technology/numpy_stacked_output9_uint16.tif', img_uint16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
